# sender-staking-contract

./: Cargo.toml  Dockerfile  LICENSE  README.md  codehash.sh  create_acc.sh  delete_acc.sh  deploy.sh  makefile
contracts/mock_ft/: Cargo.toml
contracts/mock_ft/src/: lib.rs
contracts/sender_staking/: Cargo.toml
contracts/sender_staking/src/: errors.rs  events.rs  ft_token_receiver.rs  lib.rs  migrations.rs  owner.rs  user.rs  utils.rs  view.rs
contracts/sender_staking/tests/: Cargo.toml
contracts/sender_staking/tests/src/: test_fixed_deposit.rs
releases/: sender_staking_release.wasm
