[package]
name = "mock_ft"
version = "0.0.1"
authors = ["Marco Sun <sun.dsk1@gmail.com>", "MagicGordon"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.5", default-features = false }
near-sdk = "5.3.0"
near-contract-standards = "5.3.0"
serde = "1.0"
borsh = "1.4.0"
[dev-dependencies] 
near-sdk = { version = "5.3.0", features = ["unit-testing"] }