[package]
name = "sender_staking"
version = "2.3.3"
authors = ["ZQ"]
edition = "2021"
publish = false
resolver = "1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.5", default-features = false }
near-sdk = "5.3.0"
near-contract-standards = "5.3.0"
near-sys = "=0.2"
num-bigint = "0.4.3"
once_cell = "1.19.0"
near-gas = "0.3.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
rand_distr = "0.4.3"


[dev-dependencies]
near-sdk = { version = "5.3.0", features = ["unit-testing"] }
anyhow = "1.0"
uint = { version = "=0.9.5", default-features = false }
near-sys = "=0.2"
borsh = "1.4.0"
maplit = "1.0"
near-units = "0.2.0"
serde = "1.0"
serde_with = "3.7.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
near-workspaces = "0.12.0"
mock_ft = { path = "../mock_ft" }
